# chog

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  tests.yml
lib/: Cargo.toml  README.md
lib/src/: changelog.rs  changelog_build.rs  error.rs  lib.rs  release.rs  release_build.rs  semver.rs  unreleased.rs  util.rs
lib/src/changelog/: mod.rs  tests.rs
lib/tests/integration/: main.rs  release.rs
src/: changelog.rs  lib.rs  main.rs  next_version.rs  release.rs  semver.rs  version.rs
src/changelog/: impl.rs  mod.rs  parse.rs  tests.rs
src/cli/: app.rs  mod.rs
test_changelogs/: empty_unreleased.md  full.md  full_weird_link.md  just_unreleased.md  no_release.md
tests/integration/cli/: arg_error.rs  help.rs  mod.rs  util.rs
