[package]
name = "chog"
version = "0.1.0"
authors = ["Christopher Morton <sonro@gmx.com>"]
edition = "2021"
description = """
Bump version in CHANGELOG.md - move contents of [Unreleased] to next version
and update links. For manually written changelogs in the style of Keep a
Changelog.
"""
categories = ["command-line-utilities", "development-tools"]
keywords = [
    "changelog",
    "version",
    "update",
    "bump",
    "manual",
]
repository = "https://github.com/sonro/chog"
license = "MIT/Apache-2.0"
readme = "README.md"
