[package]
name = "chog"
version = "0.2.0"
edition = "2021"
description = "Provide Changelog parsing and manipulation based on the Keep a Changelog"
categories = ["parser-implementations"]
keywords = ["changelog", "parse", "parsing", "manipulation"]
readme = "README.md"

repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
